# Neural-Network

./: README  README.md
item/LOC/: adaptcsv.py  adaptssv.py  blindtestLoc  exam.training  normvaluesLoc  testLoc  trainLoc
item/monk/: n_monk2.test  n_monk2.train  normalizeMonk.py  sn_monk1.test  sn_monk2.test  sn_monk3.test  switchColumn.py
src/: CMakeLists.txt  Dataset.h  Pattern.h  Unit.h  hiddenlayer.h  linearunit.h  network.h  outputlayer.h  sigmoidalunit.h  simulator.cpp  splitter.cpp  splitting.cpp
